<?xml version="1.0"?>
<package format="2">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>The path_searching package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="kongfz@connect.hku.hk">kongfz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
